[tool.poetry]
name = "aioworkers-databases"
version = "0.0.0"
description = "Databases plugin for aioworkers"
authors = ["Alexander Bogushov <abogushov@gmail.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
homepage = "https://github.com/aioworkers/aioworkers-databases"
repository = "https://github.com/aioworkers/aioworkers-databases"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

packages = [
     { include = "aioworkers_databases" },
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
aioworkers = "^0.18"
databases = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-aioworkers = "^0.3.0"
PyYAML = "^5.4.1"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.0.7"
pytest-mypy = "^0.8.0"
aiosqlite = "^0.17.0"
ipython = "^7.11"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
# The pattern for git tag in pep440 format. It is the same as default but without the v prefix.
pattern = "(?x)^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.poetry-dynamic-versioning.substitution]
enable = true

[tool.pytest.ini_options]
addopts = "--flake8 --doctest-modules --black --mypy --mypy-ignore-missing-imports --strict-markers"
testpaths = ["aioworkers_databases", "tests"]
flake8-max-complexity = 10
flake8-max-line-length = 99
markers = ["sqlite"]
